# romi_project

./: .gitignore  README.md
romi_ws/: README.md
romi_ws/src/romi_gazebo/: CMakeLists.txt  package.xml
romi_ws/src/romi_gazebo/config/: ekf_params.yaml  slam_params.yaml
romi_ws/src/romi_gazebo/env_hook/: romi_gazebo.dsv.in
romi_ws/src/romi_gazebo/include/: pid_control.h  romi_encoder_plugin.h  wheel_with_encoder.h
romi_ws/src/romi_gazebo/launch/: romi_control.launch.py  romi_rviz.rviz
romi_ws/src/romi_gazebo/meshes/: README.md
romi_ws/src/romi_gazebo/meshes/visual/: wheel.stl
romi_ws/src/romi_gazebo/models/: romi_meshes.urdf  tugbot_depot.sdf
romi_ws/src/romi_gazebo/scripts/: autonomous_explorer.py  data_recorder.py  export_sensor_data.py  hold_teleop.py  odom_to_tf.py  record_video.py  scan_frame_remapper.py  warehouse_explorer.py
romi_ws/src/romi_gazebo/src/: pid_control.cpp  romi_encoder_plugin.cpp
ros2_docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  docker_entrypoint.sh  verify_setup.sh
