<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>romi_gazebo</name>
  <version>0.0.0</version>
  <description>The romi_gazebo package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>robot_state_publisher</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher</depend>

  <build_depend>ignition-gazebo6</build_depend>
  <build_depend>ignition-transport11</build_depend>
  <build_depend>ignition-msgs8</build_depend>
  <build_depend>ignition-math6</build_depend>
  <build_depend>ignition-plugin1</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
